update meta description text

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="An app for teachers that utilizes AI to dramatically reduce time spent in writing lesson plans.👨‍🏫"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
