--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       name="description"
       content="An app for teachers that utilizes AI to dramatically reduce time spent in writing lesson plans.👨‍🏫"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/qlp-logo.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
